Fix Tooltip on scroll toggling new scrollbar

--- a/Src/Client/GradeMaster.DesktopClient/wwwroot/css/app.css
+++ b/Src/Client/GradeMaster.DesktopClient/wwwroot/css/app.css
@@ -173,6 +173,12 @@ h1:focus {
     }
 }
 
+@media (min-width: 641px) {
+    html {
+        overflow: hidden;
+    }
+}
+
 #menuDropdown::after {
     content: "";
     display: none;
